[gd_scene load_steps=6 format=3 uid="uid://bfs71d1sfekpu"]

[ext_resource type="Script" path="res://Scripts/yellowrock.gd" id="1_44txw"]
[ext_resource type="Resource" uid="uid://cr8x3yjoxpcc2" path="res://inventory/items/yellowrock.tres" id="2_jh6ox"]
[ext_resource type="Texture2D" uid="uid://d0jfgehpy7fxi" path="res://Art/Items/ForageItem.png" id="2_osoca"]
[ext_resource type="AudioStream" uid="uid://fchyyxjqruwu" path="res://Sounds/Effects/ExPickupSound.mp3" id="4_rkky3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yfkp0"]
radius = 36.0

[node name="yellowrock" type="Area2D" groups=["stone"]]
collision_layer = 192
collision_mask = 2
script = ExtResource("1_44txw")
item = ExtResource("2_jh6ox")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_osoca")

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rkky3")
pitch_scale = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yfkp0")

[node name="InteractLabel" type="Label" parent="."]
z_index = 2000
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 15.0
offset_right = 105.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
text = "Press 'E' to Collect"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_interactable_area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
